--- a/place1.html
+++ b/place1.html
@@ -38,13 +38,32 @@
                 <h2>Entrées</h2>
                 <div class="repas__title--underline"></div>
             </div>
-                <a class="repas__card" href="">
+            <!-- Entrée 1 -->
+            <a class="repas__card card1" href="">
                     <div class="repas__card--info">
                     <h2>Fricassée d'escargot</h2>
                     <p>Au piment d'espelette</p>
                 </div>
                 <span class="price">25€</span>
                 <div class="repas__card--info--check"><div class="repas__card--info--checkicon"><i class="fas fa-check"></i></div></div>
+            </a>
+            <!-- Entrée 2 -->
+            <a class="repas__card card2" href="">
+                    <div class="repas__card--info">
+                    <h2>Foie gras de canard mi-cuit</h2>
+                    <p>Et ses copeaux de truffe noire</p>
+                </div>
+                <span class="price">35€</span>
+                <div class="repas__card--info--check"><div class="repas__card--info--checkicon"><i class="fas fa-check"></i></div></div>
+            </a>
+            <!-- Entrée 3 -->
+            <a class="repas__card card3" href="">
+                <div class="repas__card--info">
+                <h2>Fricassée d'escargot</h2>
+                <p>Au piment d'espelette</p>
+            </div>
+            <span class="price">25€</span>
+            <div class="repas__card--info--check"><div class="repas__card--info--checkicon"><i class="fas fa-check"></i></div></div>
             </a>
             </div>
         </section>
