--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="header__book">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-            <button class="header--btn">Explorer nos restaurants</button>
+           <a href="#restaurant"><button class="header--btn">Explorer nos restaurants</button></a>
         </div>
     </header>
     <!-- Début de la section Fonctionnement -->
@@ -58,7 +58,7 @@
     </div>
     </section>
 
-    <section class="places">
+    <section class="places" id="restaurant">
         <h2>Restaurants</h2>
         <div class="places__cards">
 
