--- a/place1.html
+++ b/place1.html
@@ -38,34 +38,42 @@
                 <h2>Entrées</h2>
                 <div class="repas__title--underline"></div>
             </div>
+            <!-- Entrées -->
+            <div class="repas__starter">
             <!-- Entrée 1 -->
+
+
             <a class="repas__card card1" href="">
-                    <div class="repas__card--info">
-                    <h2>Fricassée d'escargot</h2>
+                <h2>Fricassée d'escargot</h2>
+                <div class="repas__card--info">
                     <p>Au piment d'espelette</p>
-                </div>
-                <span class="price">25€</span>
+                
+                <span class="price">25€</span></div>
                 <div class="repas__card--info--check"><div class="repas__card--info--checkicon"><i class="fas fa-check"></i></div></div>
             </a>
+
+
             <!-- Entrée 2 -->
             <a class="repas__card card2" href="">
-                    <div class="repas__card--info">
-                    <h2>Foie gras de canard mi-cuit</h2>
+                <h2>Foie gras de canard mi-cuit</h2>
+                <div class="repas__card--info">
                     <p>Et ses copeaux de truffe noire</p>
+                    <span class="price">35€</span>
                 </div>
-                <span class="price">35€</span>
                 <div class="repas__card--info--check"><div class="repas__card--info--checkicon"><i class="fas fa-check"></i></div></div>
             </a>
             <!-- Entrée 3 -->
             <a class="repas__card card3" href="">
+                <h2>Oeuf au plat</h2>
                 <div class="repas__card--info">
-                <h2>Fricassée d'escargot</h2>
-                <p>Au piment d'espelette</p>
+                <p>Assaisonné à la truffe sur lit de caviar</p>
+                <span class="price">25€</span>
             </div>
-            <span class="price">25€</span>
+            
             <div class="repas__card--info--check"><div class="repas__card--info--checkicon"><i class="fas fa-check"></i></div></div>
             </a>
             </div>
+        </div>
         </section>
 <!-- Footer -->
     <footer class="footer">
