--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header class="header">
-        <img id="top" src="./src/images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood">
+        <a class="logo" href="index.html"><img id="top" src="./src/images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood"></a>
         <div class="header__location"><i class="icon iconlocation fas fa-map-marker-alt"></i><p>Paris, Belleville</p></div>
         <div class="header__book">
             <h1>Réservez le menu qui vous convient</h1>
