--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="tuto__cards">
 
-        <div class="tuto__card">
+        <div class="tuto__card tuto__card1">
             <span class="tuto__card--number">1</span>
             <div class="tuto__card--info">
             <i class="fas fa-mobile-alt"></i>
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div class="tuto__card">
+        <div class="tuto__card tuto__card2">
             <span class="tuto__card--number">2</span>
             <div class="tuto__card--info">
             <i class="fas fa-list-ul"></i>
@@ -47,7 +47,7 @@
         </div>
         </div>
 
-        <div class="tuto__card">
+        <div class="tuto__card tuto__card3">
             <span class="tuto__card--number">3</span>
             <div class="tuto__card--info">
             <i class="fas fa-store"></i>
@@ -63,7 +63,7 @@
         <div class="places__cards">
 
             <!-- Restaurant num 1 -->
-            <a class="places__cards--card" href="place1.html" target="blank">
+            <a class="places__cards--card places__cards--card1" href="place1.html" target="blank">
                 <img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" >
                 <span class="new">Nouveau</span>
             <div class="places__cards--info">
@@ -78,7 +78,7 @@
         </a>
 
         <!-- Restaurant num 2 -->
-        <a class="places__cards--card" href="">
+        <a class="places__cards--card places__cards--card2" href="place2.html">
             <img src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût" >
             <span class="new">Nouveau</span>
         <div class="places__cards--info">
@@ -93,7 +93,7 @@
     </a>
     <!-- Restaurant num 3 -->
 
-    <a class="places__cards--card" href="">
+    <a class="places__cards--card places__cards--card3" href="">
         <img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La palette du goût" >
     <div class="places__cards--info">
       <div class="places__cards--info--text"><h3>À la française</h3>
@@ -108,7 +108,7 @@
 
 <!-- Restaurant num 4 -->
 
-<a class="places__cards--card" href="">
+<a class="places__cards--card places__cards--card4" href="">
     <img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La palette du goût" >
 <div class="places__cards--info">
   <div class="places__cards--info--text"><h3>Le délice des sens</h3>
@@ -123,13 +123,15 @@
 </div>
     </section>
     <footer class="footer">
+        <div class="footer__block">
        <h2><a href="#top">ohmyfood</a></h2>
-        <div class="footer__link">
+        <div class="footer__block--link">
             <a href=""><i class="fas fa-utensils"></i>Proposer un restaurant</a>
             <a href=""><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
             <a href="">Mentions légales</a>
             <a href="">Contact</a>
         </div>
+    </div>
     </footer>
 </body>
 </html>
