--- a/place1.html
+++ b/place1.html
@@ -34,6 +34,7 @@
                 </div>
             </div>
             <!-- Titre entrées -->
+            <div class="menu">
             <div class="repas">
             <div class="repas__title">
                 <h2>Entrées</h2>
@@ -164,7 +165,8 @@
             </a>
             </div>
         </div>
-        <div class="order__btn"><a href=""><button class="order__btn--order">Commander</button></a></div>
+    </div>
+        <div class="order__btn"><button class="order__btn--order">Commander</button></div>
 
         </section>
 <!-- Footer -->
