--- a/place1.html
+++ b/place1.html
@@ -171,13 +171,15 @@
         </section>
 <!-- Footer -->
     <footer class="footer">
-        <h2><a href="index.html">ohmyfood</a></h2>
-         <div class="footer__link">
+        <div class="footer__block">
+            <div class="footer__link">
+             <div class="footer__link--title"><h2><a href="index.html">ohmyfood</a></h2></div>
              <a href=""><i class="fas fa-utensils"></i>Proposer un restaurant</a>
              <a href=""><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
              <a href="">Mentions légales</a>
              <a href="mailto:contact@ohmyfood.fr">Contact</a>
          </div>
+        </div>
      </footer>
  </body>
  </html>
