--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
     <header class="header">
         <a class="logo" href="index.html"><img id="top" src="./src/images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood"></a>
         <div class="header__location"><i class="icon iconlocation fas fa-map-marker-alt"></i><p>Paris, Belleville</p></div>
-        <div class="header__book">
+        
+    </header>
+
+    <!-- Section explo -->
+    <section class="headerbot">
+        <div class="headerbot__book">
             <h1>Réservez le menu qui vous convient</h1>
             <p>Découvrez des restaurants d'exception, séléctionnés par nos soins.</p>
-           <a href="#restaurant"><button class="header--btn">Explorer nos restaurants</button></a>
+           <a href="#restaurant"><button class="headerbot--btn">Explorer nos restaurants</button></a>
         </div>
-    </header>
+    </section>
     <!-- Début de la section Fonctionnement -->
     <section class="tuto">
 
@@ -124,14 +129,14 @@
     </section>
     <footer class="footer">
         <div class="footer__block">
-       <h2><a href="#top">ohmyfood</a></h2>
-        <div class="footer__block--link">
-            <a href=""><i class="fas fa-utensils"></i>Proposer un restaurant</a>
-            <a href=""><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
-            <a href="">Mentions légales</a>
-            <a href="">Contact</a>
+            <div class="footer__link">
+             <div class="footer__link--title"><h2><a href="index.html">ohmyfood</a></h2></div>
+             <a href=""><i class="fas fa-utensils"></i>Proposer un restaurant</a>
+             <a href=""><i class="fas fa-hands-helping"></i>Devenir partenaire</a>
+             <a href="">Mentions légales</a>
+             <a href="mailto:contact@ohmyfood.fr">Contact</a>
+         </div>
         </div>
-    </div>
-    </footer>
+     </footer>
 </body>
 </html>
