--- a/place2.html
+++ b/place2.html
@@ -34,6 +34,7 @@
                 </div>
             </div>
             <!-- Titre entrées -->
+            <div class="menu">
             <div class="repas">
             <div class="repas__title">
                 <h2>Entrées</h2>
@@ -177,6 +178,7 @@
             </a>
             </div>
         </div>
+    </div>
         <div class="order__btn"><a href=""><button class="order__btn--order">Commander</button></a></div>
 
         </section>
