target blank removed

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="places__cards">
 
             <!-- Restaurant num 1 -->
-            <a class="places__cards--card places__cards--card1" href="place1.html" target="__blank">
+            <a class="places__cards--card places__cards--card1" href="place1.html">
                 <img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" >
                 <span class="new">Nouveau</span>
             <div class="places__cards--info">
@@ -84,7 +84,7 @@
         </a>
 
         <!-- Restaurant num 2 -->
-        <a class="places__cards--card places__cards--card2" href="place2.html" target="_blank">
+        <a class="places__cards--card places__cards--card2" href="place2.html">
             <img src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût" >
             <span class="new">Nouveau</span>
         <div class="places__cards--info">
@@ -99,7 +99,7 @@
     </a>
     <!-- Restaurant num 3 -->
 
-    <a class="places__cards--card places__cards--card3" href="place3.html" target="_blank">
+    <a class="places__cards--card places__cards--card3" href="place3.html">
         <img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La palette du goût" >
     <div class="places__cards--info">
       <div class="places__cards--info--text"><h3>À la française</h3>
@@ -114,7 +114,7 @@
 
 <!-- Restaurant num 4 -->
 
-<a class="places__cards--card places__cards--card4" href="place4.html" target="_blank">
+<a class="places__cards--card places__cards--card4" href="place4.html">
     <img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La palette du goût" >
 <div class="places__cards--info">
   <div class="places__cards--info--text"><h3>Le délice des sens</h3>
