--- a/place4.html
+++ b/place4.html
@@ -22,13 +22,13 @@
         <img id="top" src="./src/images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood">
     </div>
         <div class="header__cover">
-            <img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût">
+            <img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La palette du goût">
         </div>
         </header>
 <!-- Section commandes -->
         <section class="order">
             <div class="order__top">
-                <h1>La palette du goût</h1>
+                <h1>Le délice des sens</h1>
                 <div class="heart">
                     <i class="far fa-heart"></i>
                     <i class="fas fa-heart"></i>
