minor things added

--- a/place4.html
+++ b/place4.html
@@ -19,7 +19,7 @@
     <header class="header">
         <div class="header__top">
         <a href="index.html" class="header__top--back"><i class="fas fa-arrow-left"></i></a>
-        <img id="top" src="./src/images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood">
+        <a class="logolink" href="index.html"><img id="top" src="./src/images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood"></a>
     </div>
         <div class="header__cover">
             <img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La palette du goût">
