--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="loader.css">
     <script src="https://kit.fontawesome.com/f09bdbeec6.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -73,7 +74,7 @@
         <div class="places__cards">
 
             <!-- Restaurant num 1 -->
-            <a class="places__cards--card places__cards--card1" href="place1.html">
+            <a class="places__cards--card places__cards--card1" href="la-palette-du-gout.html">
                 <img src="./src/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La palette du goût" >
                 <span class="new">Nouveau</span>
             <div class="places__cards--info">
@@ -88,7 +89,7 @@
         </a>
 
         <!-- Restaurant num 2 -->
-        <a class="places__cards--card places__cards--card2" href="place2.html">
+        <a class="places__cards--card places__cards--card2" href="la-note-enchantee.html">
             <img src="./src/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La palette du goût" >
             <span class="new">Nouveau</span>
         <div class="places__cards--info">
@@ -103,7 +104,7 @@
     </a>
     <!-- Restaurant num 3 -->
 
-    <a class="places__cards--card places__cards--card3" href="place3.html">
+    <a class="places__cards--card places__cards--card3" href="a-la-francaise.html">
         <img src="./src/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La palette du goût" >
     <div class="places__cards--info">
       <div class="places__cards--info--text"><h3>À la française</h3>
@@ -118,7 +119,7 @@
 
 <!-- Restaurant num 4 -->
 
-<a class="places__cards--card places__cards--card4" href="place4.html">
+<a class="places__cards--card places__cards--card4" href="le-delice-des-sens.html">
     <img src="./src/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="La palette du goût" >
 <div class="places__cards--info">
   <div class="places__cards--info--text"><h3>Le délice des sens</h3>
